--- a/org/reading.org
+++ b/org/reading.org
@@ -1,38 +1,39 @@
 * 书目
-** 《Practical Common Lisp》
--
-   Introduction: Why Lisp?
-   Lather, Rinse, Repeat: A Tour of the REPL
-   Practical: A Simple Database
-   Syntax and Semantics
-   Functions
-   Variables
-   Macros: Standard Control Constructs
-   Macros: Defining Your Own
-   Practical: Building a Unit Test Framework
-   Numbers, Characters, and Strings
-   Collections
-   They Called It LISP for a Reason: List Processing
-   Beyond Lists: Other Uses for Cons Cells
-   Files and File I/O
-   Practical: A Portable Pathname Library
-   Object Reorientation: Generic Functions
-   Object Reorientation: Classes
-   A Few FORMAT Recipes
-   Beyond Exception Handling: Conditions and Restarts
-   The Special Operators
-   Programming in the Large: Packages and Symbols
-   LOOP for Black Belts
-   Practical: A Spam Filter
-   Practical: Parsing Binary Files
-   Practical: An ID3 Parser
-   Practical: Web Programming with AllegroServe
-   Practical: An MP3 Database
-   Practical: A Shoutcast Server
-   Practical: An MP3 Browser
-   Practical: An HTML Generation Library, the Interpreter
-   Practical: An HTML Generation Library, the Compiler
-   Conclusion: What's Next?
+** TODO 《Practical Common Lisp》
+- progress [2/32]
+  - [X] Introduction: Why Lisp?
+    korn-like motto: a programble programing language
+  - [X] Lather, Rinse, Repeat: A Tour of the REPL
+  - [ ] Practical: A Simple Database
+  - [ ] Syntax and Semantics
+  - [ ] Functions
+  - [ ] Variables
+  - [ ] Macros: Standard Control Constructs
+  - [ ] Macros: Defining Your Own
+  - [ ] Practical: Building a Unit Test Framework
+  - [ ] Numbers, Characters, and Strings
+  - [ ] Collections
+  - [ ] They Called It LISP for a Reason: List Processing
+  - [ ] Beyond Lists: Other Uses for Cons Cells
+  - [ ] Files and File I/O
+  - [ ] Practical: A Portable Pathname Library
+  - [ ] Object Reorientation: Generic Functions
+  - [ ] Object Reorientation: Classes
+  - [ ] A Few FORMAT Recipes
+  - [ ] Beyond Exception Handling: Conditions and Restarts
+  - [ ] The Special Operators
+  - [ ] Programming in the Large: Packages and Symbols
+  - [ ] LOOP for Black Belts
+  - [ ] Practical: A Spam Filter
+  - [ ] Practical: Parsing Binary Files
+  - [ ] Practical: An ID3 Parser
+  - [ ] Practical: Web Programming with AllegroServe
+  - [ ] Practical: An MP3 Database
+  - [ ] Practical: A Shoutcast Server
+  - [ ] Practical: An MP3 Browser
+  - [ ] Practical: An HTML Generation Library, the Interpreter
+  - [ ] Practical: An HTML Generation Library, the Compiler
+  - [ ] Conclusion: What's Next?
 ** 《深入理解计算机系统》
    - chapter 1 计算机系统漫游 [0/10]
      - [ ] 信息就是位 + 上下文
