--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,6 +2,8 @@
 * Tasks
 ** Organization
    :LOGBOOK:
+   CLOCK: [2011-10-19 Wed 10:21]
+   CLOCK: [2011-10-19 Wed 09:49]--[2011-10-19 Wed 09:50] =>  0:01
    CLOCK: [2011-10-17 Mon 11:58]--[2011-10-17 Mon 11:59] =>  0:01
    CLOCK: [2011-10-17 Mon 11:05]--[2011-10-17 Mon 11:54] =>  0:49
    CLOCK: [2011-10-14 Fri 12:23]--[2011-10-17 Mon 09:56] => 69:33
