--- a/org/reading.org
+++ b/org/reading.org
@@ -283,7 +283,7 @@
      - [ ] 回家
 
 ** 《次第花开》  - 希阿荣博堪步 著
-   - 第一部 珍宝人生 [1/3]
+   - 第一部 珍宝人生 [3/3]
      - [X] 珍宝人生
        关于无我的探讨. 不相信自己的大脑,其实只是一种gtd 方面西方人的客观描述
        在佛教当中不相信自己的大脑其实就是一种关于无我的态度的哲学. gtd 方面将
@@ -297,7 +297,18 @@
          解: 解开，分开，融化,调和，处理.
          脱: 离开， 取下，除去 等含义.
        字面上的含义就是解后脱离开的一个过程.  人生修行安乐的源泉.
-     - [ ] 安乐
-     - [ ] 从玉树说起
+     - [X] 安乐
+     - [X] 从玉树说起
+       为什么灾难如此频繁？ 为什么佛法兴盛之地也会发生灾难？
+       佛法的加持力何在？为什么修持佛法还是不能避免无常？
+   - 佛门 [0/5]
+	我们寻遍整个世界, 发现佛法可以让我们的心得到安乐.
+     - [ ] 入佛门
+     - [ ] 如何做功课
+     - [ ] 关于前行的简短开示
+     - [ ] 开吾
+     - [ ] 善护口业
+   - 走出修行的误区 [/]
        
+     
 
