--- a/org/reading.org
+++ b/org/reading.org
@@ -309,6 +309,9 @@
      - [ ] 开吾
      - [ ] 善护口业
    - 走出修行的误区 [/]
-       
+ 追求觉悟的过程，就像在意个无边无际的迷宫里突围，没有佛法的指引，
+ 我们永远都将被困在里面，原地打转
+    - [ ]
+
      
 
