--- a/org/reading.org
+++ b/org/reading.org
@@ -262,21 +262,21 @@
      - [X] 新西伯利亚及其以西
      - [X] 莫斯科
      - [X] 前往爱尔兰
-   - 第三篇 从顿琴到好望角 [1/8]
+   - 第三篇 从顿琴到好望角 [8/8]
      - [X] 非洲： 征服撒哈啦
-     - [ ] 撒哈啦以南
-     - [ ] 顺河而下
-     - [ ] 愤怒的羔羊
-     - [ ] 逃亡
-     - [ ] 赞比亚和大津巴布韦
-     - [ ] 博次瓦纳
-     - [ ] 南非
+     - [X] 撒哈啦以南
+     - [X] 顺河而下
+     - [X] 愤怒的羔羊
+     - [X] 逃亡
+     - [X] 赞比亚和大津巴布韦
+     - [X] 博次瓦纳
+     - [X] 南非
    - 第四篇 绕过和恩角
-     - [ ] 澳大利亚的长途跋涉
-     - [ ] 世界尽头
-     - [ ] 布宜诺斯艾利斯
-     - [ ] 智力与复活节岛
-     - [ ] 走进印加
+     - [X] 澳大利亚的长途跋涉
+     - [X] 世界尽头
+     - [X] 布宜诺斯艾利斯
+     - [X] 智力与复活节岛
+     - [X] 走进印加
      - [ ] 沿着达尔文的足迹
      - [ ] 达里恩地带
      - [ ] 巴拿马运河
