--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -3,9 +3,11 @@
 |  2011-9-29 | audusd   | 0.9831 | 0.9830 |  421.6 | 23219.22 |
 | 2011-10-10 | usdchf   | 0.9182 | 0.9130 |   -170 |          |
 | 2011-10-11 | audusd   | 0.9936 | 0.9876 |     16 |          |
-| 2011-10.13 | eurusd   | 1.3763 | 1.3700 |   -378 |          |
+| 2011-10-13 | eurusd   | 1.3763 | 1.3700 |   -378 |          |
+| 2011-10-17 | eurusd   | 1.3837 | 1.3830 |    -84 |          |
+| 2011-10-21 | usdchf   | 0.8911 | 0.8954 |   -288 |          |
 |------------+----------+--------+--------+--------+----------|
-|      total |          |        |        | -110.4 |          |
+|      total |          |        |        | -482.4 |          |
 #+TBLFM: $LR5=vsum(@2$5..@-1$5)
 
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
@@ -211,3 +213,10 @@ macd 反弹模型.
 [2011-10-19 Wed 09:50]
  维持昨天的看法，非美进入到小时图震荡走势，macd 模型交易模型依然成立.
  瑞郎和欧元进场.
+
+瑞郎 根据通道模型进场，止损40个点，打到止损就回头。
+教训1. 目前所有的交易似乎都没有右侧执行的影子. 什么时候右侧？ 在进场时间上也没有完整的预期. 
+      几乎打了止损行情就掉头按照预期的方向运行.
+
+      解决方法。 日后做交易在进场时间上应该有一个相应完整的预期. 比如在几点差不多进场. 
+
