--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -206,6 +206,9 @@ Next: 交易币种初选  交易计划模板  Prev: 交易计划模板
 [2011-10-18 Tue 09:27]
 
 macd 反弹模型. 
+挂单多瑞郎和欧元， 都没有成交. 正常. 连续的两天挂单，先使用了 1 手反弹交易，OCO . 第二天
+macd 反弹依然成立，但是考虑到如果到达价位可能逆向动能过强，分别挂单降低到 0.6 非 OCO .
+但是也依然没有成交。 .
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
   :LOGBOOK:
   CLOCK: [2011-10-19 Wed 09:50]--[2011-10-19 Wed 10:21] =>  0:31
@@ -218,5 +221,9 @@ macd 反弹模型.
 教训1. 目前所有的交易似乎都没有右侧执行的影子. 什么时候右侧？ 在进场时间上也没有完整的预期. 
       几乎打了止损行情就掉头按照预期的方向运行.
 
-      解决方法。 日后做交易在进场时间上应该有一个相应完整的预期. 比如在几点差不多进场. 
+      行情当时整体分为大部分是横盘，当时只有瑞郎是最强的。避险情绪明显， 当*整体市场一致性不好*
+      或者市场整体处于一个短线的横盘震荡的走势的时候需要参考欧元等主要非美货币做进场时机的右侧
+      交易要求.解决方法。 日后做交易在进场时间上应该有一个相应完整的预期. 比如在几点差不多进场. 
 
+
+目前在仓位上可以确定 标准手 1.2 为重仓. 大约
