--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -226,4 +226,5 @@ macd 反弹依然成立，但是考虑到如果到达价位可能逆向动能过
       交易要求.解决方法。 日后做交易在进场时间上应该有一个相应完整的预期. 比如在几点差不多进场. 
 
 
-目前在仓位上可以确定 标准手 1.2 为重仓. 大约
+目前在仓位上可以确定 标准手 1.2 为标准仓位 0.6 为清仓.  当遇到纯粹的分析形的机会的时候使用 0.3
+的仓位.
