--- a/org/reading.org
+++ b/org/reading.org
@@ -316,3 +316,33 @@
 
      
 
+** 《股市趋势技术分析》  -  Edvards & Magee.  
+   - 第一部分 技术分析理论.
+     1) 交易和投资的技术分析方法 / 2
+     2) 图像 / 7
+     3) 道氏理论 / 11
+     4) 道氏理论的实际应用 / 21
+     5) 道氏理论的缺陷 / 35
+	5.1) 20 和 21 世纪的道氏理论 / 39
+     6) 重要的反转模式 / 47
+     7) 重要的反转模式： 续篇 / 62
+     8) 重要的反转模式： 三角模式 / 82
+     9) 重要的反转模式： 续篇 / 109
+     10) 其他反转现象 /128
+	 10.1) 潜在重要的短期现象 / 153
+     11) 巩固形态 / 160
+     12) 缺口  / 179
+     13) 支撑和阻力 / 197
+     14) 趋势线和通道 / 216
+     15) 主要趋势线 / 238
+	 15.1)  21 世纪的指数交易 / 251
+     16) 商品齐活图像的技术分析 / 261
+	 16.1)  商品齐活图像的技术分析: 一种 21 世纪的观点 / 261
+     17) 总结和结论 / 271
+	 17.1)  21世纪的技术分析和技术: 电脑和互联网, 投资工具的信息革命. / 276
+	 17.2)  投资技术的进步 / 283
+	
+   - 第二部分 交易技略.
+     18) 技略问题 / 306
+	18.1) 长线投资者的策略和技略.
+     
