--- a/org/reading.org
+++ b/org/reading.org
@@ -314,14 +314,14 @@
  我们永远都将被困在里面，原地打转
     - [ ]
 
-     
-
 ** 《股市趋势技术分析》  -  Edvards & Magee.  
    - 第一部分 技术分析理论.
      1) 交易和投资的技术分析方法 / 2
      2) 图像 / 7
      3) 道氏理论 / 11
      4) 道氏理论的实际应用 / 21
+	关于道在实际应用中有一句话，那就是当行情支持做空的时候，整体收益要比做多3倍多，是很让人吃惊，
+	莫非在熊市当中道更加富有效率么？
      5) 道氏理论的缺陷 / 35
 	5.1) 20 和 21 世纪的道氏理论 / 39
      6) 重要的反转模式 / 47
