--- a/org/reading.org
+++ b/org/reading.org
@@ -315,8 +315,8 @@
     - [ ]
 
 ** 《股市趋势技术分析》  -  Edvards & Magee.  
-   - 第一部分 技术分析理论.
-     1) 交易和投资的技术分析方法 / 2
+   - 第一部分 技术分析理论. [/]
+     1) [ ] 交易和投资的技术分析方法 / 2
      2) 图像 / 7
      3) 道氏理论 / 11
      4) 道氏理论的实际应用 / 21
