--- a/org/reading.org
+++ b/org/reading.org
@@ -348,3 +348,44 @@
      
 
 ** 《Get The Things Done》 搞定  戴维. 艾伦
+   - 第一部分 通向从容之道 [0/3]
+     - [ ] 新情况，新做法 3
+       像实干家一样思考问题， 像思想家一样付诸行动.
+     - [ ] 掌握生活： 横向管理工作流程的5个阶段 27
+       我们应该使得任何事物变得越简单越好，而不是比较简单.
+     - [ ] 控制项目: 纵向管理项目计划的5个阶段 61
+       当着手处理平凡琐事的时候，心必须着眼于大局，这样一来
+       所有的烦琐小事才能够沿着正确的方向发展.
+   - 第二部分 远离压力，提高效率 [0/7]
+     - [ ] 准备工作: 确定时间，空间和工具. 95
+       提升个人工作效率的最佳手段之一，就是拥有你乐于使用的管理工具.
+     - [ ] 收集阶段： 归拢材料 117
+       训练自己发现那些没有到位的事情.
+     - [ ] 处理阶段： 清空工作篮 133
+       工作篮是一额个处理问题的站点，而不是一个存储容器.
+     - [ ] 组织整理： 建立好清单 155
+       在从局部管理向全局总揽的转化过程中，一个完整和同步的工作清单堪称一个主要的运作手段
+     - [ ] 检查回顾: 保障系统的有效运行. 201
+       只要你保证在适当的时候查阅适当的资料，每天仅仅几秒钟也就是你回顾检查所需要的全部时间
+     - [ ] 执行阶段: 选择最合适的行动 213
+       你的工作是发现你的工作，然后全身新投入其中
+     - [ ] 学会控制项目 233
+       准备行动，创造条件， 对工作进行一些创造性的思维。 然后，你就能把大多数人远远的抛在后面了.
+   - 第三部分 三个关键原则 245
+     - [ ] 原则一： 养成收集的习惯 247
+       
+       焦虑感和内疚感并非是由于承担太多的工作而造成的，这是由于你撕毁了
+       同自己签订的协议而自然导致的结果
+
+     - [ ] 原则二： 确定 “下一步行动”  259
+       
+       无论问题有多么打，多么严峻，你总可以向解决它的方向迈出一小步, 从而根本除掉束手无策的感觉. 行动起来吧
+       
+     - [ ] 原则三: 学会关注结果 273
+
+       没有明确任务的展望充其量只是一个梦想，而缺乏前景的任务只是痛苦和艰辛的劳作。同时拥有前景和任务才是世界的
+       希望.
+       
+
+	
+       
