--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,14 +2,13 @@
 * Tasks
 ** Organization
    :LOGBOOK:
+   CLOCK: [2011-10-25 Tue 09:40]
+   CLOCK: [2011-10-24 Mon 16:51]--[2011-10-25 Tue 09:40] => 16:49
    CLOCK: [2011-10-24 Mon 16:51]--[2011-10-25 二 08:31] => 15:40
    CLOCK: [2011-10-24 Mon 10:34]--[2011-10-24 Mon 11:07] =>  0:33
    CLOCK: [2011-10-24 Mon 09:52]--[2011-10-24 Mon 09:54] =>  0:02
-<<<<<<< local
    CLOCK: [2011-10-19 Wed 10:21]--[2011-10-21 Fri 11:56] => 49:35
-=======
    CLOCK: [2011-10-19 Wed 10:21]--[2011-10-23 日 22:35] => 108:14
->>>>>>> other
    CLOCK: [2011-10-19 Wed 09:49]--[2011-10-19 Wed 09:50] =>  0:01
    CLOCK: [2011-10-17 Mon 11:58]--[2011-10-17 Mon 11:59] =>  0:01
    CLOCK: [2011-10-17 Mon 11:05]--[2011-10-17 Mon 11:54] =>  0:49
