--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -219,10 +219,20 @@ macd 反弹依然成立，但是考虑到如果到达价位可能逆向动能过
 等待晚上这三个货币出现合理的次要节奏的时候在考虑进场.
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
   :LOGBOOK:
-  CLOCK: [2011-10-25 二 08:31]--[2011-10-25 二 08:56] =>  0:25
+  CLOCK: [2011-10-25 二 08:31]--[2011-10-25 Tue 10:16] =>  1:45
   :END:
 [2011-10-25 二 08:31]
 
 美元(day)指数: 价格跌破55日均线，形成转换走势,日图面临76 的强支撑                       
 美元(4hr)指数: 主客观一致下跌，周内继续考虑是做空美元，做多非美                           
 美元(1hr)指数: 昨日反弹未果回归跌势,日内继续短线做多非美                             
+
+4hr，1hr 分化: 一致性较好. 做多下面货币
+
+已经有中继或者次的迹象:[gbp]
+已经有不规范的次的迹象:[aud][cad]
+
+(/ 500 64) 
+止损有效性.
+
+如果进场前出现新高，撤销交易
