--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,7 +2,9 @@
 * Tasks
 ** Organization
    :LOGBOOK:
-   CLOCK: [2011-10-25 Tue 09:40]
+   CLOCK: [2011-10-25 Tue 10:30]
+   CLOCK: [2011-10-25 Tue 10:16]--[2011-10-25 Tue 10:30] =>  0:14
+   CLOCK: [2011-10-25 Tue 09:40]--[2011-10-25 Tue 09:44] =>  0:04
    CLOCK: [2011-10-24 Mon 16:51]--[2011-10-25 Tue 09:40] => 16:49
    CLOCK: [2011-10-24 Mon 16:51]--[2011-10-25 二 08:31] => 15:40
    CLOCK: [2011-10-24 Mon 10:34]--[2011-10-24 Mon 11:07] =>  0:33
