--- a/org/reading.org
+++ b/org/reading.org
@@ -341,17 +341,15 @@
      17) 总结和结论 / 271
 	 17.1)  21世纪的技术分析和技术: 电脑和互联网, 投资工具的信息革命. / 276
 	 17.2)  投资技术的进步 / 283
-	
    - 第二部分 交易技略.
      18) 技略问题 / 306
 	18.1) 长线投资者的策略和技略.
      
-
 ** 《Get The Things Done》 搞定  戴维. 艾伦
-   - 第一部分 通向从容之道 [0/3]
-     - [ ] 新情况，新做法 3
+   - 第一部分 通向从容之道 [2/3]
+     - [X] 新情况，新做法 3
        像实干家一样思考问题， 像思想家一样付诸行动.
-     - [ ] 掌握生活： 横向管理工作流程的5个阶段 27
+     - [X] 掌握生活： 横向管理工作流程的5个阶段 27
        我们应该使得任何事物变得越简单越好，而不是比较简单.
      - [ ] 控制项目: 纵向管理项目计划的5个阶段 61
        当着手处理平凡琐事的时候，心必须着眼于大局，这样一来
