--- a/org/learning-orgmode.org
+++ b/org/learning-orgmode.org
@@ -14,13 +14,13 @@
   :END:
 [2011-09-27 Tue 10:53]
 [[file:~/org/docs/orgmode-tut.org::*Handling%20Phone%20Calls][Handling Phone Calls]]
-The Insidious Big Brother Database (BBDB) is a contact management utility
-不能
+	The Insidious Big Brother Database (BBDB) is a contact management utility
+	目前来看还不是一个合适的数据库，貌似只能存储联系人信息
 *** TODO 搞清楚 ID 是干啥用的
   :LOGBOOK:
   :END:
-[2011-09-26 Mon 17:36]
-[[file:~/org/docs/orgmode-tut.org::*Time%20Clocking][Time Clocking]]
+	[2011-09-26 Mon 17:36]
+	[[file:~/org/docs/orgmode-tut.org::*Time%20Clocking][Time Clocking]]
 
 *** DONE 翻译 reminders 尝试使用 orgmode 做提醒
   :LOGBOOK:
@@ -31,29 +31,22 @@ The Insidious Big Brother Database (BBDB) is a contact management utility
 	翻译完毕，但是具体还不知道怎么用
 
 *** TODO schedule todo list to somedays.
-  CLOCK: [2011-09-20 Tue 10:21]--[2011-09-20 Tue 10:22] =>  0:01
-[2011-09-20 Tue 10:21]
 *** bh/clock-in-last-time					       :NOTE:
    :LOGBOOK:
    CLOCK: [2011-10-08 Sat 09:56]--[2011-10-08 Sat 09:58] =>  0:02
    :END:
-[2011-10-08 Sat 09:56]
-[[file:~/org/orgmode.org::*%E9%9C%80%E8%A6%81%E6%90%9E%E6%B8%85%E6%A5%9A%E4%BB%80%E4%B9%88%E6%98%AFproject.%20%E9%80%9A%E5%B8%B8%E7%9A%84%E4%BD%BF%E7%94%A8%E6%83%85%E6%99%AF%E6%98%AF%E4%BB%80%E4%B9%88][需要搞清楚什么是project. 通常的使用情景是什么]]
-需要 clock-in last time 的意义, 是否是找到最后一个任务并且 clock in?
+	需要 clock-in last time 的意义, 是否是找到最后一个任务并且 clock in?
 ** 建立一个定期的任务，每天可以定期执行
-** 打开一个 org-mode 中的文字链接
-   CLOCK: [2011-09-26 Mon 13:13]--[2011-09-26 Mon 13:14] =>  0:01
+** org-mode 一些常用的快捷键
+   :LOGBOOK:
+   CLOCK: [2011-10-25 Tue 14:23]--[2011-10-25 Tue 14:25] =>  0:02
+   :END:
+   - 给一个任务打 tag .				C-c C-t
+   - 打开一个orgmode 中的文字链 org-open-at-point   C-c C-o
+   - 给某一个任务做 clock-in			C-c C-x <TAB>
+   - 给某一个任务做 clock-out			C-c C-x C-o
+   - 进入到refile 的界面当中			C-M r  cc 退出
 
-   org-open-at-point
-   C-c C-o
-** org-mode refile						       :NOTE:
-C-M r  开启一个refile. 存储在 refile.org 中, 编辑完毕后用 c-c c-c 保存退出.
-会提示多种模式的 refile item. 具体在 [[file:~/.emacs.d/org-init.el::(setq%20org-capture-templates][file:~/.emacs.d/org-init.el::(setq org-capture-templates]]
-定义
-   CLOCK: [2011-09-20 Tue 01:14]--[2011-09-20 Tue 01:50] =>  0:36
-
-** org-mode 
-C-c C-t key  给一个任务节点打tag
 ** STARTED 翻译 time clocking , 学习作者为什么会沉迷于clocking.
   :LOGBOOK:
   CLOCK: [2011-09-27 Tue 10:26]--[2011-09-27 Tue 10:53] =>  0:27
