--- a/org/gemstone.org
+++ b/org/gemstone.org
@@ -104,13 +104,30 @@
       :END:
      - gemclient (refresh,stop,start,status)
 
-**** NEXT cmos 相关设计
-   - 主要包含的命令:
-     - net 
-       - MACs
-     - service (list service )
-   - cmos 功
-
+**** NEXT cmos 的插件需求
+     - network [/]
+       - [ ] mac address
+       - [ ] ip address
+       - [ ] interface related
+     - system
+       - [ ] cpu
+	# of cores, # of cpus, # of threads
+       - [ ] model
+       - [ ] real freq / capable freq
+     - [ ] mem
+       - [ ] size
+       - [ ] in-used slots and avaiable slots
+       - [ ] serial no.
+     - hard disk
+       - [ ] raid
+       - [ ] size
+       - [ ] avaiable space and percent
+     - service
+       - [ ] ntp
+       - [ ] yum
+       - [ ] sitebase / opsfree
+       - [ ] ddnsupdate
+       - [ ] rsync
 
 *** 系统整体规划.
 
@@ -188,3 +205,26 @@
  load iptable 的配置和 fetch iptable 的程序我们最好分离。
 严庄 2011-10-12 14:38:14
  这样。。未来部署的时候会更灵活，安全。。不会因为一个脚本失败而失败。
+** DONE 给postgresql 打一个 tops 包
+  :LOGBOOK:
+  CLOCK: [2011-10-24 Mon 11:07]--[2011-10-24 Mon 16:51] =>  5:44
+  CLOCK: [2011-10-09 Sun 12:10]--[2011-10-09 Sun 15:01] =>  2:51
+  :END:
+[2011-10-09 Sun 12:10]
+[[file:~/org/refile.org::*%E5%B8%AElidun%20%E6%90%9E%E5%AE%9A%20postgresql%20hstore][帮lidun 搞定 postgresql hstore]]
+  - http://wwwmaster.postgresql.org/download/mirrors-ftp/source/v9.1.1/postgresql-9.1.1.tar.bz2
+    包名: tops-pgsql
+    
+** TODO gemserver.rsync 
+  :LOGBOOK:
+  CLOCK: [2011-10-17 Mon 12:00]--[2011-10-18 Tue 09:27] => 21:27
+  :END:
+[2011-10-17 Mon 12:00]
+[[file:~/org/reading.org::*%E3%80%8A%E6%97%85%E8%A1%8C%E4%BA%BA%E7%94%9F%E6%9C%80%E6%9C%89%E4%BB%B7%E5%80%BC%E7%9A%84%E6%8A%95%E8%B5%84%E3%80%8B%20-%20Jim%20Rogers][《旅行人生最有价值的投资》   - Jim Rogers]]
+
+@400000004e9b9fa02597f084 WARN: verification: setting symlink /home/gemserver -> /home/gemserver.rsync/current
+@400000004e9b9fa025981f64 WARN: verification: could not symlink /home/gemserver -> /home/gemserver.rsync/current
+@400000004e9b9fa02598a04c WARN: verification: director /home/gemserver 0755 root root
+
+gemserver.rsync 是从哪里rsync 的？
+
