--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,7 +2,7 @@
 * Tasks
 ** Organization
    :LOGBOOK:
-   CLOCK: [2011-10-25 Tue 10:30]
+   CLOCK: [2011-10-25 Tue 10:30]--[2011-10-25 Tue 14:23] =>  3:53
    CLOCK: [2011-10-25 Tue 10:16]--[2011-10-25 Tue 10:30] =>  0:14
    CLOCK: [2011-10-25 Tue 09:40]--[2011-10-25 Tue 09:44] =>  0:04
    CLOCK: [2011-10-24 Mon 16:51]--[2011-10-25 Tue 09:40] => 16:49
