--- a/org/reading.org
+++ b/org/reading.org
@@ -351,6 +351,16 @@
        像实干家一样思考问题， 像思想家一样付诸行动.
      - [X] 掌握生活： 横向管理工作流程的5个阶段 27
        我们应该使得任何事物变得越简单越好，而不是比较简单.
+       
+       1. 工作时经历的 5 个阶段： [/]
+	  - [ ] 收集 Collect
+	    如何收集? 通过 refile 来收集?
+	  - [ ] 处理 Process
+	    C-c C-w  refile 到各个文件当中.
+	  - [ ] 整理 Orgnize
+	  - [ ] 回顾 Review
+	  - [ ] 行动 Do
+       
      - [ ] 控制项目: 纵向管理项目计划的5个阶段 61
        当着手处理平凡琐事的时候，心必须着眼于大局，这样一来
        所有的烦琐小事才能够沿着正确的方向发展.
