--- a/org/health_ent.org
+++ b/org/health_ent.org
@@ -7,17 +7,8 @@
    :CATEGORY: 健康
    :END:
 *** 看海贼王
-*** WAITING 吃饭						    :WAITING:
-  :LOGBOOK:
-  CLOCK: [2011-09-29 Thu 12:39]--[2011-09-29 Thu 12:40] =>  0:01
-  CLOCK: [2011-09-29 Thu 12:23]--[2011-09-29 Thu 12:39] =>  0:16
-  CLOCK: [2011-09-27 Tue 12:25]--[2011-09-27 Tue 14:15] =>  1:50
-  :END:
-[2011-09-27 Tue 12:25]
-[[file:~/org/refile.org::*daily%20trading%20plan][daily trading plan]]
 
-
-*** WAITING smoking					       :NOTE:WAITING:
+*** smoking						     :NOTE:CANCELLED:
    :LOGBOOK:
    CLOCK: [2011-09-29 Thu 14:30]--[2011-09-29 Thu 15:42] =>  1:12
    CLOCK: [2011-09-29 Thu 13:14]--[2011-09-29 Thu 13:22] =>  0:08
