--- a/org/docs/orgmode-tut.org
+++ b/org/docs/orgmode-tut.org
@@ -1179,16 +1179,8 @@ This helps to keep my agenda clutter-free.
 
 我现在使用 punching in 和 punching out 来开始和结束我的一天. 它定义了一个默认
 的随时会停止的计时任务. 我发现默认的 org-mode 设置会让我在一天当中会丢掉不少clocked
-minutes 。 如果你写一个notes 并且置为DONE 状态，那么计时会随之停止.
-
-I now use the concept of punching in and punching out at the start and
-end of my work day.  This defines a default task to clock time on
-whenever the clock would normally stop.  I found that with the default
-org-mode setup I would lose clocked minutes during the day, a minute
-here, a minute there, and that all adds up.  This is especially true
-if you write notes when moving to a DONE state - in this case the
-clock normally stops before you have composed the note -- and good
-notes take a few minutes to write.
+minutes 。 如果你写一个notes 并且置为DONE 状态，那么计时会随之停止.同时会把计时回到
+Orgnizition 状态
 
 我的 clocking 设置基本上象下面这样 :
 
