--- a/org/learning-orgmode.org
+++ b/org/learning-orgmode.org
@@ -45,13 +45,13 @@
    - 给某一个任务做 clock-out			C-c C-x C-o
    - 进入到refile 的界面当中			C-M r  cc 退出
 
-** STARTED 翻译 time clocking , 学习作者为什么会沉迷于clocking.
+** DONE 翻译 time clocking , 学习作者为什么会沉迷于clocking.
   :LOGBOOK:
+  CLOCK: [2011-10-26 Wed 10:06]--[2011-10-26 Wed 10:11] =>  0:05
   CLOCK: [2011-09-27 Tue 10:26]--[2011-09-27 Tue 10:53] =>  0:27
   CLOCK: [2011-09-26 Mon 17:55]--[2011-09-27 Tue 10:16] => 16:21
   CLOCK: [2011-09-26 Mon 17:39]--[2011-09-26 Mon 17:54] =>  0:15
   :END:
-[2011-09-26 Mon 17:38]
 [[file:~/org/docs/orgmode-tut.org::*Time%20Clocking][Time Clocking]]
 ** 如何展现每天的时间报表					       :NOTE:
    :LOGBOOK:
