--- a/org/reading.org
+++ b/org/reading.org
@@ -357,8 +357,9 @@
 	    如何收集? 通过 refile 来收集?
 	  - [ ] 处理 Process
 	    C-c C-w  refile 到各个文件当中.
+	    并且打上TODO 还是 NOTES的标签
 	  - [ ] 整理 Orgnize
-	    
+	    每个 not
 	  - [ ] 回顾 Review
 	  - [ ] 行动 Do
        
