--- a/org/snocengin.org
+++ b/org/snocengin.org
@@ -127,3 +127,13 @@ openssl enc -des -d -a -in <filename.des> -out <filename>
    然后通过 17forex 向外网导出邮件端口 。 收集邮件
 
 
+** STARTED 配置 yasnippet & flymake
+    :LOGBOOK:
+    CLOCK: [2011-10-08 Sat 09:58]--[2011-10-08 Sat 11:30] =>  1:32
+    CLOCK: [2011-10-08 Sat 09:55]--[2011-10-08 Sat 09:56] =>  0:01
+    CLOCK: [2011-09-29 Thu 16:28]--[2011-09-29 Thu 18:05] =>  1:37
+    :END:
+
+    如果需要安装 python-mode , 先搞定 auto-complete
+    目前flymake 特别的慢
+
