--- a/org/todolist.org
+++ b/org/todolist.org
@@ -2,6 +2,9 @@
 * Tasks
 ** Organization
    :LOGBOOK:
+   CLOCK: [2011-10-26 Wed 10:13]--[2011-10-26 Wed 10:18] =>  0:05
+   CLOCK: [2011-10-26 Wed 10:11]--[2011-10-26 Wed 10:13] =>  0:02
+   CLOCK: [2011-10-26 Wed 09:42]--[2011-10-26 Wed 10:06] =>  0:24
    CLOCK: [2011-10-25 Tue 10:30]--[2011-10-25 Tue 14:23] =>  3:53
    CLOCK: [2011-10-25 Tue 10:16]--[2011-10-25 Tue 10:30] =>  0:14
    CLOCK: [2011-10-25 Tue 09:40]--[2011-10-25 Tue 09:44] =>  0:04
