--- a/org/reading.org
+++ b/org/reading.org
@@ -352,9 +352,24 @@
      - [X] 掌握生活： 横向管理工作流程的5个阶段 27
        我们应该使得任何事物变得越简单越好，而不是比较简单.
        
-       1. 工作时经历的 5 个阶段： [/]
-	  - [ ] 收集 Collect
-	    如何收集? 通过 refile 来收集?
+       1. 工作时经历的 5 个阶段： [1/5]
+	  - [X] 收集 Collect
+	    如何收集? 
+	    - 通过 refile 来收集.
+	    - 通过 手机计事本收集. 收集完毕之后讲内容 refile 到 电脑中进行 P/O (Process/Orgnize)
+
+		
+	    
+	    需要经常清空收集的工作篮，清空工作篮并不意味着
+	    完成你收集到的全部工作。 面对每个工作篮中收集到的
+	    东西，需要确定他是什么，他需要你采取什么行动.
+	    完成了对工作篮的处理后，你将：
+	    - [X] 丢弃你不在需要的一切
+	    - [X] 完成所有用不了两分钟就能完成的事物.
+	    - [X] 吧所有可以委托他人处理的事情委派出去.
+	    - [X] 为所有需要两分钟以上的行动注明提示信息,以提醒你日后执行.
+	    - [X] 根据获取的信息，明确你目前较为重要的工作和任务.
+		
 	  - [ ] 处理 Process
 	    C-c C-w  refile 到各个文件当中.
 	    并且打上TODO 还是 NOTES的标签
