--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -236,3 +236,10 @@ macd 反弹依然成立，但是考虑到如果到达价位可能逆向动能过
 止损有效性.
 
 如果进场前出现新高，撤销交易
+
+* TRADEPLAN (tradeplan)  :TRADEPLAN:
+  :LOGBOOK:
+  CLOCK: [2011-10-25 二 08:31]--[2011-10-25 Tue 10:16] =>  1:45
+  :END:
+[2011-10-26 三 08:31]
+
