--- a/org/reading.org
+++ b/org/reading.org
@@ -414,3 +414,48 @@
 
 	
        
+** 《史蒂夫.乔布斯传》	 《沃尔特.艾萨克森》
+   1. [X] 童年
+   2. [X] 奇特的一对
+   3. [ ] 出离
+   4. [ ] 雅达利与印度
+   5. [ ] Apple I
+   6. [ ] Apple II
+   7. [ ] 克里斯安和丽萨
+   8. [ ] 施乐和丽萨
+   9. [ ] 上市
+   10. [ ] Mac 诞生了
+   11. [ ] 现实扭曲力场
+   12. [ ] 设计
+   13. [ ] 制造 Mac
+   14. [ ] 斯卡利来了
+   15. [ ] 麦金塔电脑的发布
+   16. [ ] 盖茨与乔布斯
+   17. [ ] 伊卡洛斯
+   18. [ ] NeXT
+   19. [ ] 皮克斯
+   20. [ ] 凡人
+   21. [ ] 玩具总动员
+   22. [ ] 再度降临
+   23. [ ] 回归
+   24. [ ] 非同凡想
+   25. [ ] 设计原则
+   26. [ ] iMac
+   27. [ ] CEO
+   28. [ ] 苹果零售店
+   29. [ ] 数字中枢
+   30. [ ] iTunes 商店
+   31. [ ] 爱音乐的人
+   32. [ ] 皮克斯的朋友
+   33. [ ] 21 世纪的 Mac
+   34. [ ] 第一回合
+   35. [ ] iPhone
+   36. [ ] 第二回合
+   37. [ ] iPad
+   38. [ ] 新的战斗
+   39. [ ] 飞向太空
+   40. [ ] 第三回合
+   41. [ ] 遗产
+   42. [ ] 致谢
+   43. [ ] 摄影集
+   44. [ ] 资料来源
