--- a/org/reading.org
+++ b/org/reading.org
@@ -413,22 +413,21 @@
        
 
 	
-       
 ** 《史蒂夫.乔布斯传》	 《沃尔特.艾萨克森》
    1. [X] 童年
    2. [X] 奇特的一对
-   3. [ ] 出离
-   4. [ ] 雅达利与印度
-   5. [ ] Apple I
-   6. [ ] Apple II
-   7. [ ] 克里斯安和丽萨
-   8. [ ] 施乐和丽萨
-   9. [ ] 上市
-   10. [ ] Mac 诞生了
-   11. [ ] 现实扭曲力场
-   12. [ ] 设计
-   13. [ ] 制造 Mac
-   14. [ ] 斯卡利来了
+   3. [X] 出离
+   4. [X] 雅达利与印度
+   5. [X] Apple I
+   6. [X] Apple II
+   7. [X] 克里斯安和丽萨
+   8. [X] 施乐和丽萨
+   9. [X] 上市
+   10. [X] Mac 诞生了
+   11. [X] 现实扭曲力场
+   12. [X] 设计
+   13. [X] 制造 Mac
+   14. [X] 斯卡利来了
    15. [ ] 麦金塔电脑的发布
    16. [ ] 盖茨与乔布斯
    17. [ ] 伊卡洛斯
