--- a/org/learning-orgmode.org
+++ b/org/learning-orgmode.org
@@ -11,6 +11,7 @@
    :END:
   :PROPERTIES:
   :ORDERED:  t
+  :ID:       12e9161e-299e-45bf-aeea-b96585228e02
   :END:
 [2011-09-27 Tue 10:53]
 [[file:~/org/docs/orgmode-tut.org::*Handling%20Phone%20Calls][Handling Phone Calls]]
