--- a/org/reading.org
+++ b/org/reading.org
@@ -412,7 +412,6 @@
        希望.
        
 
-	
 ** 《史蒂夫.乔布斯传》	 《沃尔特.艾萨克森》
    1. [X] 童年
    2. [X] 奇特的一对
@@ -428,8 +427,8 @@
    12. [X] 设计
    13. [X] 制造 Mac
    14. [X] 斯卡利来了
-   15. [ ] 麦金塔电脑的发布
-   16. [ ] 盖茨与乔布斯
+   15. [X] 麦金塔电脑的发布
+   16. [X] 盖茨与乔布斯
    17. [ ] 伊卡洛斯
    18. [ ] NeXT
    19. [ ] 皮克斯
