--- a/org/reading.org
+++ b/org/reading.org
@@ -302,14 +302,14 @@
      - [X] 从玉树说起
        为什么灾难如此频繁？ 为什么佛法兴盛之地也会发生灾难？
        佛法的加持力何在？为什么修持佛法还是不能避免无常？
-   - 佛门 [0/5]
+   - 佛门 [5/5]
 	我们寻遍整个世界, 发现佛法可以让我们的心得到安乐.
-     - [ ] 入佛门
-     - [ ] 如何做功课
-     - [ ] 关于前行的简短开示
-     - [ ] 开吾
-     - [ ] 善护口业
-   - 走出修行的误区 [/]
+     - [X] 入佛门
+     - [X] 如何做功课
+     - [X] 关于前行的简短开示
+     - [X] 开吾
+     - [X] 善护口业
+   - 走出修行的误区 [0/0]
  追求觉悟的过程，就像在意个无边无际的迷宫里突围，没有佛法的指引，
  我们永远都将被困在里面，原地打转
     - [ ]
