--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -244,3 +244,15 @@ macd 反弹依然成立，但是考虑到如果到达价位可能逆向动能过
 [2011-10-26 三 08:31]
 
 做多美元，考虑到加元。但是进场过早， 美元行情日图向下转换
+* TRADEPLAN (tradeplan)  :TRADEPLAN:
+  :LOGBOOK:
+  CLOCK: [2011-11-02 Wed 11:21]
+  :END:
+[2011-11-02 Wed 11:21]
+
+澳元做多， 
+
+alibaba 计划
+alibaba @7.6 9w   
+alibaba @4.0 15w
+alibaba @3.7 10w 
