--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -246,7 +246,7 @@ macd 反弹依然成立，但是考虑到如果到达价位可能逆向动能过
 做多美元，考虑到加元。但是进场过早， 美元行情日图向下转换
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
   :LOGBOOK:
-  CLOCK: [2011-11-02 Wed 11:21]
+  CLOCK: [2011-11-02 Wed 11:21]--[2011-11-02 Wed 13:51] =>  2:30
   :END:
 [2011-11-02 Wed 11:21]
 
