--- a/org/reading.org
+++ b/org/reading.org
@@ -230,7 +230,25 @@
    - 第二章 词法分析
      
 ** 《黑客与画家》
-   - 第一章
+   - [ ] 为什么书呆子不受欢迎
+     他们的心思在别的地方
+   - [ ] 黑客与画家
+     黑客也是创造者，与画家，建筑师，作家一样
+   - [ ] 不能说的话
+     如果你的想法是社会无法容忍的，你怎么办?
+   - [ ] 良好的坏习惯
+     与其他美国人一样，黑客成功的秘诀就是打破常规.
+   - [ ] 另一条路
+     互联网是微机诞生后的最大机会.
+   - [ ] 如何创造财富
+     致富最好的方法就是为社会创造财富。创造财富的最好办法就是创业
+   - [ ] 关注贫富分化
+     "收入分配不平等" 的危害， 会不会没有我们想的那样严重?
+   - [ ] 防止垃圾邮件的一种方法
+     
+   - [ ] 
+   - [ ] 
+   - [ ] 
 ** DONE 《旅行人生最有价值的投资》   - Jim Rogers
    :LOGBOOK:
    CLOCK: [2011-10-10 日 22:43]--[2011-10-23 日 22:43] => 312:00
@@ -312,7 +330,7 @@
    - 走出修行的误区 [0/0]
  追求觉悟的过程，就像在意个无边无际的迷宫里突围，没有佛法的指引，
  我们永远都将被困在里面，原地打转
-    - [ ]
+    - [ ] 
 
 ** 《股市趋势技术分析》  -  Edvards & Magee.  
    - 第一部分 技术分析理论. [/]
