--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -6,8 +6,11 @@
 | 2011-10-13 | eurusd   | 1.3763 | 1.3700 |   -378 |          |
 | 2011-10-17 | eurusd   | 1.3837 | 1.3830 |    -84 |          |
 | 2011-10-21 | usdchf   | 0.8911 | 0.8954 |   -288 |          |
+| 2011-10-25 | audusd   | 1.0440 | 1.0435 |    -54 |          |
+| 2011-10-26 | usdcad   | 1.0110 | 1.0114 |     25 |          |
+| 2011-10-26 | usdchf   | 0.8634 | 1.0114 |     25 |          |
 |------------+----------+--------+--------+--------+----------|
-|      total |          |        |        | -482.4 |          |
+|      total |          |        |        | -486.4 |          |
 #+TBLFM: $LR5=vsum(@2$5..@-1$5)
 
 * TRADEPLAN (tradeplan)  :TRADEPLAN:
@@ -205,7 +208,7 @@ macd 反弹依然成立，但是考虑到如果到达价位可能逆向动能过
   :LOGBOOK:
   CLOCK: [2011-10-24 Mon 09:54]--[2011-10-24 Mon 10:34] =>  0:40
   :END:
-[2011-10-24 Mon 09:54]
+ [2011-10-24 Mon 09:54]
 
 美元(day)指数: 价格跌破55日均线，形成转换走势,日图面临76 的强支撑                       
 美元(4hr)指数: 主客观一致下跌，周内继续考虑是做空美元，做多非美                           
