--- a/org/reading.org
+++ b/org/reading.org
@@ -229,27 +229,38 @@
      - [ ] TINY 样本语言与编译器
    - 第二章 词法分析
      
-** 《黑客与画家》
-   - [ ] 为什么书呆子不受欢迎
+** DONE 《黑客与画家》 - Paul Graham [15/15]
+   - [X] 为什么书呆子不受欢迎
      他们的心思在别的地方
-   - [ ] 黑客与画家
+   - [X] 黑客与画家
      黑客也是创造者，与画家，建筑师，作家一样
-   - [ ] 不能说的话
+   - [X] 不能说的话
      如果你的想法是社会无法容忍的，你怎么办?
-   - [ ] 良好的坏习惯
+   - [X] 良好的坏习惯
      与其他美国人一样，黑客成功的秘诀就是打破常规.
-   - [ ] 另一条路
+   - [X] 另一条路
      互联网是微机诞生后的最大机会.
-   - [ ] 如何创造财富
+   - [X] 如何创造财富
      致富最好的方法就是为社会创造财富。创造财富的最好办法就是创业
-   - [ ] 关注贫富分化
+   - [X] 关注贫富分化
      "收入分配不平等" 的危害， 会不会没有我们想的那样严重?
-   - [ ] 防止垃圾邮件的一种方法
-     
-   - [ ] 
-   - [ ] 
-   - [ ] 
-** DONE 《旅行人生最有价值的投资》   - Jim Rogers
+   - [X] 防止垃圾邮件的一种方法
+     不久前，许多专家还认为无法有效的过滤垃圾邮件。 本文改变了他们的想法.
+   - [X] 设计者的品味
+     如何作出优秀的东西.
+   - [X] 编程语言解析.
+     什么是编程语言? 为什么他们现在很热门?
+   - [X] 一百年后的编程语言
+     一百年后，人类怎样编程? 为什么不认为现在开始就这样编程呢？
+   - [X] 拒绝平庸
+     别忘了你的对手与你一样，能用任何想用的语言编写互联网软件.
+   - [X] 书呆子的复仇
+     在高科技行业，只有失败者采用“业界最佳实践”
+   - [X] 梦寐以求的编程语言
+     一种好的编程语言，是让黑客可以随心所欲使用的语言。
+   - [X] 设计与研究
+     研究必须是“新”的，而设计必须是“好”的。
+** DONE 《旅行人生最有价值的投资》   - Jim Rogers 
    :LOGBOOK:
    CLOCK: [2011-10-10 日 22:43]--[2011-10-23 日 22:43] => 312:00
    :END:
