--- a/org/reading.org
+++ b/org/reading.org
@@ -312,7 +312,7 @@
      - [X] 巴拿马运河
      - [X] 回家
 
-** 《次第花开》  - 希阿荣博堪步 著
+** DONE 《次第花开》  - 希阿荣博堪步 著
    - 第一部 珍宝人生 [3/3]
      - [X] 珍宝人生
        关于无我的探讨. 不相信自己的大脑,其实只是一种gtd 方面西方人的客观描述
