--- a/org/reading.org
+++ b/org/reading.org
@@ -22,11 +22,17 @@
       (add-record (make-cd "Roses" "Kathy Mattea" 7 t))
       (add-record (make-cd "Fly" "Dixie Chicks" 8 t))
       (add-record (make-cd "Home" "Dixie Chicks" 9 t))
-    
+
       dump *db*
+      ; for cl
       (defun dump-db ()
 	  (dolist (cd *db*)
 	  (format t "~{~a:~10t~a~%~}~%" cd)))
+      ; for el
+      (defun dump-db ()
+	  (dolist (cd *db*)
+      (message cd)
+	  ))
       (dump-db)
     
       - Improving the User Interaction
