--- a/org/reading.org
+++ b/org/reading.org
@@ -320,7 +320,7 @@
 
 ** DONE 《次第花开》  - 希阿荣博堪步 著
    - 第一部 珍宝人生 [3/3]
-     - [X] 珍宝人生
+     - [X] 珍宝人生 /3
        关于无我的探讨. 不相信自己的大脑,其实只是一种gtd 方面西方人的客观描述
        在佛教当中不相信自己的大脑其实就是一种关于无我的态度的哲学. gtd 方面将
        一切都交给时间管理系统，让自己内心得到安静， 通过一种时间管理的方法来求解
@@ -333,22 +333,39 @@
          解: 解开，分开，融化,调和，处理.
          脱: 离开， 取下，除去 等含义.
        字面上的含义就是解后脱离开的一个过程.  人生修行安乐的源泉.
-     - [X] 安乐
-     - [X] 从玉树说起
+     - [X] 安乐  /37
+     - [X] 从玉树说起 /45
+       附言： 玉树的简短开示. / 71
        为什么灾难如此频繁？ 为什么佛法兴盛之地也会发生灾难？
        佛法的加持力何在？为什么修持佛法还是不能避免无常？
-   - 佛门 [5/5]
+   - 佛门 [5/5]   / 73
 	我们寻遍整个世界, 发现佛法可以让我们的心得到安乐.
-     - [X] 入佛门
-     - [X] 如何做功课
-     - [X] 关于前行的简短开示
-     - [X] 开吾
-     - [X] 善护口业
-   - 走出修行的误区 [0/0]
- 追求觉悟的过程，就像在意个无边无际的迷宫里突围，没有佛法的指引，
- 我们永远都将被困在里面，原地打转
-    - [ ] 
-      
+     - [X] 入佛门   /75
+     - [X] 如何做功课  /87
+     - [X] 关于前行的简短开示 /97
+     - [X] 开吾  /119
+     - [X] 善护口业  /124 
+   - 走出修行的误区 [4/4]   /129
+	追求觉悟的过程，就像在意个无边无际的迷宫里突围，没有佛法的指引，
+	我们永远都将被困在里面，原地打转
+     - [X] 皈依	/131
+     - [X] 出离心 /145
+     - [X] 菩提心 /161
+     - [X] 上师和弟子 /181
+   - 冬日札记 [4/4]
+     2009年初，西阿荣博堪布在家乡的扎西特林闭关中心，写下多篇随感，或睹物思人，
+     或畅谈佛法人生，素朴平实的语言背后是一贯的清亮，通达。
+     - [X] 信心    /215
+     - [X] 无尽藏  /221
+     - [X] 母亲    /227
+     - [X] 人人是我师 /232
+   - 生命的依怙
+     真正化解痛苦与危机的方法就是断除损害众生的恶业，行持自利利他的善业。作为佛弟子,
+     不论能力大小，都可以做利益有情的事业，这其中最直接的方式就是放生。
+     - [X] 回忆上师 / 241
+     - [X] 嘱托 /249
+     - [X] 放生问答 /265
+       
 ** 《股市趋势技术分析》  -  Edvards & Magee.  
    - 第一部分 技术分析理论. [/]
      1) [ ] 交易和投资的技术分析方法 / 2
@@ -443,7 +460,7 @@
        没有明确任务的展望充其量只是一个梦想，而缺乏前景的任务只是痛苦和艰辛的劳作。同时拥有前景和任务才是世界的
        希望.
        
-** 《史蒂夫.乔布斯传》	 《沃尔特.艾萨克森》
+** DONE 《史蒂夫.乔布斯传》	 《沃尔特.艾萨克森》
    1. [X] 童年
    2. [X] 奇特的一对
    3. [X] 出离
@@ -460,31 +477,31 @@
    14. [X] 斯卡利来了
    15. [X] 麦金塔电脑的发布
    16. [X] 盖茨与乔布斯
-   17. [ ] 伊卡洛斯
-   18. [ ] NeXT
-   19. [ ] 皮克斯
-   20. [ ] 凡人
-   21. [ ] 玩具总动员
-   22. [ ] 再度降临
-   23. [ ] 回归
-   24. [ ] 非同凡想
-   25. [ ] 设计原则
-   26. [ ] iMac
-   27. [ ] CEO
-   28. [ ] 苹果零售店
-   29. [ ] 数字中枢
-   30. [ ] iTunes 商店
-   31. [ ] 爱音乐的人
-   32. [ ] 皮克斯的朋友
-   33. [ ] 21 世纪的 Mac
-   34. [ ] 第一回合
-   35. [ ] iPhone
-   36. [ ] 第二回合
-   37. [ ] iPad
-   38. [ ] 新的战斗
-   39. [ ] 飞向太空
-   40. [ ] 第三回合
-   41. [ ] 遗产
-   42. [ ] 致谢
-   43. [ ] 摄影集
-   44. [ ] 资料来源
+   17. [X] 伊卡洛斯
+   18. [X] NeXT
+   19. [X] 皮克斯
+   20. [X] 凡人
+   21. [X] 玩具总动员
+   22. [X] 再度降临
+   23. [X] 回归
+   24. [X] 非同凡想
+   25. [X] 设计原则
+   26. [X] iMac
+   27. [X] CEO
+   28. [X] 苹果零售店
+   29. [X] 数字中枢
+   30. [X] iTunes 商店
+   31. [X] 爱音乐的人
+   32. [X] 皮克斯的朋友
+   33. [X] 21 世纪的 Mac
+   34. [X] 第一回合
+   35. [X] iPhone
+   36. [X] 第二回合
+   37. [X] iPad
+   38. [X] 新的战斗
+   39. [X] 飞向太空
+   40. [X] 第三回合
+   41. [X] 遗产
+   42. [X] 致谢
+   43. [X] 摄影集
+   44. [X] 资料来源
