--- a/org/reading.org
+++ b/org/reading.org
@@ -1,4 +1,181 @@
 * 书目
+** DONE 《黑客与画家》 - Paul Graham [15/15]
+   - [X] 为什么书呆子不受欢迎
+     他们的心思在别的地方
+   - [X] 黑客与画家
+     黑客也是创造者，与画家，建筑师，作家一样
+   - [X] 不能说的话
+     如果你的想法是社会无法容忍的，你怎么办?
+   - [X] 良好的坏习惯
+     与其他美国人一样，黑客成功的秘诀就是打破常规.
+   - [X] 另一条路
+     互联网是微机诞生后的最大机会.
+   - [X] 如何创造财富
+     致富最好的方法就是为社会创造财富。创造财富的最好办法就是创业
+   - [X] 关注贫富分化
+     "收入分配不平等" 的危害， 会不会没有我们想的那样严重?
+   - [X] 防止垃圾邮件的一种方法
+     不久前，许多专家还认为无法有效的过滤垃圾邮件。 本文改变了他们的想法.
+   - [X] 设计者的品味
+     如何作出优秀的东西.
+   - [X] 编程语言解析.
+     什么是编程语言? 为什么他们现在很热门?
+   - [X] 一百年后的编程语言
+     一百年后，人类怎样编程? 为什么不认为现在开始就这样编程呢？
+   - [X] 拒绝平庸
+     别忘了你的对手与你一样，能用任何想用的语言编写互联网软件.
+   - [X] 书呆子的复仇
+     在高科技行业，只有失败者采用“业界最佳实践”
+   - [X] 梦寐以求的编程语言
+     一种好的编程语言，是让黑客可以随心所欲使用的语言。
+   - [X] 设计与研究
+     研究必须是“新”的，而设计必须是“好”的。
+** DONE 《旅行人生最有价值的投资》   - Jim Rogers 
+   :LOGBOOK:
+   CLOCK: [2011-10-10 日 22:43]--[2011-10-23 日 22:43] => 312:00
+   :END:
+   - 第一篇 从顿琴到东京 [10/10]
+     - [X] 飞向苏联
+     - [X] 纽约
+     - [X] 穿越欧洲
+     - [X] 林茨
+     - [X] 中欧
+     - [X] 前往伊斯坦布尔
+     - [X] 古老的土耳其斯坦
+     - [X] 进入中国
+     - [X] 西安
+     - [X] 从西安到北京
+   - 第二篇 从东京到顿琴 [8/8]
+     - [X] 日本: 值得投资的国家
+       俄罗斯和南非是产金的大国. 这两个国家经济已经开始发展，如果全球恢复金本位
+       那是否意味着这两个国家会更加富有。
+       作者关于金本位的质疑:
+       1. 金本位对政客的约束可能会导致政客马上会将金本位作为替罪羊废除金本位
+       2. 当经济发展的时候政客会对黄金参水. 
+
+	  作者还提出关于金本位的解决办法..简单的取消硬通货的资本利得税. 具体原因
+	  也搞不明柏为什么.
+     - [X] 在世界的边缘
+     - [X] 穿越蛮荒之地
+     - [X] 西伯利亚
+     - [X] 乌兰乌德，济马和坎斯克
+     - [X] 新西伯利亚及其以西
+     - [X] 莫斯科
+     - [X] 前往爱尔兰
+   - 第三篇 从顿琴到好望角 [8/8]
+     - [X] 非洲： 征服撒哈啦
+     - [X] 撒哈啦以南
+     - [X] 顺河而下
+     - [X] 愤怒的羔羊
+     - [X] 逃亡
+     - [X] 赞比亚和大津巴布韦
+     - [X] 博次瓦纳
+     - [X] 南非
+   - 第四篇 绕过和恩角 [9/9]
+     - [X] 澳大利亚的长途跋涉
+     - [X] 世界尽头
+     - [X] 布宜诺斯艾利斯
+     - [X] 智力与复活节岛
+     - [X] 走进印加
+     - [X] 沿着达尔文的足迹
+     - [X] 达里恩地带
+     - [X] 巴拿马运河
+     - [X] 回家
+
+** DONE 《次第花开》  - 希阿荣博堪步 著
+   - 第一部 珍宝人生 [3/3]
+     - [X] 珍宝人生 /3
+       关于无我的探讨. 不相信自己的大脑,其实只是一种gtd 方面西方人的客观描述
+       在佛教当中不相信自己的大脑其实就是一种关于无我的态度的哲学. gtd 方面将
+       一切都交给时间管理系统，让自己内心得到安静， 通过一种时间管理的方法来求解
+       脱.能够让自己跳出来作为一种旁观者的态度来处理周遭的事情. 
+       
+       关于认识痛苦. 静静的观察痛苦.
+       痛苦源于我执和法执.
+       
+       解.脱.
+         解: 解开，分开，融化,调和，处理.
+         脱: 离开， 取下，除去 等含义.
+       字面上的含义就是解后脱离开的一个过程.  人生修行安乐的源泉.
+     - [X] 安乐  /37
+     - [X] 从玉树说起 /45
+       附言： 玉树的简短开示. / 71
+       为什么灾难如此频繁？ 为什么佛法兴盛之地也会发生灾难？
+       佛法的加持力何在？为什么修持佛法还是不能避免无常？
+   - 佛门 [5/5]   / 73
+	我们寻遍整个世界, 发现佛法可以让我们的心得到安乐.
+     - [X] 入佛门   /75
+     - [X] 如何做功课  /87
+     - [X] 关于前行的简短开示 /97
+     - [X] 开吾  /119
+     - [X] 善护口业  /124 
+   - 走出修行的误区 [4/4]   /129
+	追求觉悟的过程，就像在意个无边无际的迷宫里突围，没有佛法的指引，
+	我们永远都将被困在里面，原地打转
+     - [X] 皈依	/131
+     - [X] 出离心 /145
+     - [X] 菩提心 /161
+     - [X] 上师和弟子 /181
+   - 冬日札记 [4/4]
+     2009年初，西阿荣博堪布在家乡的扎西特林闭关中心，写下多篇随感，或睹物思人，
+     或畅谈佛法人生，素朴平实的语言背后是一贯的清亮，通达。
+     - [X] 信心    /215
+     - [X] 无尽藏  /221
+     - [X] 母亲    /227
+     - [X] 人人是我师 /232
+   - 生命的依怙
+     真正化解痛苦与危机的方法就是断除损害众生的恶业，行持自利利他的善业。作为佛弟子,
+     不论能力大小，都可以做利益有情的事业，这其中最直接的方式就是放生。
+     - [X] 回忆上师 / 241
+     - [X] 嘱托 /249
+     - [X] 放生问答 /265
+       
+** DONE 《史蒂夫.乔布斯传》	 《沃尔特.艾萨克森》
+   1. [X] 童年
+   2. [X] 奇特的一对
+   3. [X] 出离
+   4. [X] 雅达利与印度
+   5. [X] Apple I
+   6. [X] Apple II
+   7. [X] 克里斯安和丽萨
+   8. [X] 施乐和丽萨
+   9. [X] 上市
+   10. [X] Mac 诞生了
+   11. [X] 现实扭曲力场
+   12. [X] 设计
+   13. [X] 制造 Mac
+   14. [X] 斯卡利来了
+   15. [X] 麦金塔电脑的发布
+   16. [X] 盖茨与乔布斯
+   17. [X] 伊卡洛斯
+   18. [X] NeXT
+   19. [X] 皮克斯
+   20. [X] 凡人
+   21. [X] 玩具总动员
+   22. [X] 再度降临
+   23. [X] 回归
+   24. [X] 非同凡想
+   25. [X] 设计原则
+   26. [X] iMac
+   27. [X] CEO
+   28. [X] 苹果零售店
+   29. [X] 数字中枢
+   30. [X] iTunes 商店
+   31. [X] 爱音乐的人
+   32. [X] 皮克斯的朋友
+   33. [X] 21 世纪的 Mac
+   34. [X] 第一回合
+   35. [X] iPhone
+   36. [X] 第二回合
+   37. [X] iPad
+   38. [X] 新的战斗
+   39. [X] 飞向太空
+   40. [X] 第三回合
+   41. [X] 遗产
+   42. [X] 致谢
+   43. [X] 摄影集
+   44. [X] 资料来源
+
 ** TODO 《Practical Common Lisp》
    1. [X] Introduction: Why Lisp?
       korn-like motto: a programble programing language
@@ -28,6 +205,8 @@
       (defun dump-db ()
 	  (dolist (cd *db*)
 	  (format t "~{~a:~10t~a~%~}~%" cd)))
+      
+      关于 format 的常用法练习.
       ; for el
       (defun dump-db ()
 	  (dolist (cd *db*)
@@ -235,137 +414,6 @@
      - [ ] TINY 样本语言与编译器
    - 第二章 词法分析
      
-** DONE 《黑客与画家》 - Paul Graham [15/15]
-   - [X] 为什么书呆子不受欢迎
-     他们的心思在别的地方
-   - [X] 黑客与画家
-     黑客也是创造者，与画家，建筑师，作家一样
-   - [X] 不能说的话
-     如果你的想法是社会无法容忍的，你怎么办?
-   - [X] 良好的坏习惯
-     与其他美国人一样，黑客成功的秘诀就是打破常规.
-   - [X] 另一条路
-     互联网是微机诞生后的最大机会.
-   - [X] 如何创造财富
-     致富最好的方法就是为社会创造财富。创造财富的最好办法就是创业
-   - [X] 关注贫富分化
-     "收入分配不平等" 的危害， 会不会没有我们想的那样严重?
-   - [X] 防止垃圾邮件的一种方法
-     不久前，许多专家还认为无法有效的过滤垃圾邮件。 本文改变了他们的想法.
-   - [X] 设计者的品味
-     如何作出优秀的东西.
-   - [X] 编程语言解析.
-     什么是编程语言? 为什么他们现在很热门?
-   - [X] 一百年后的编程语言
-     一百年后，人类怎样编程? 为什么不认为现在开始就这样编程呢？
-   - [X] 拒绝平庸
-     别忘了你的对手与你一样，能用任何想用的语言编写互联网软件.
-   - [X] 书呆子的复仇
-     在高科技行业，只有失败者采用“业界最佳实践”
-   - [X] 梦寐以求的编程语言
-     一种好的编程语言，是让黑客可以随心所欲使用的语言。
-   - [X] 设计与研究
-     研究必须是“新”的，而设计必须是“好”的。
-** DONE 《旅行人生最有价值的投资》   - Jim Rogers 
-   :LOGBOOK:
-   CLOCK: [2011-10-10 日 22:43]--[2011-10-23 日 22:43] => 312:00
-   :END:
-   - 第一篇 从顿琴到东京 [10/10]
-     - [X] 飞向苏联
-     - [X] 纽约
-     - [X] 穿越欧洲
-     - [X] 林茨
-     - [X] 中欧
-     - [X] 前往伊斯坦布尔
-     - [X] 古老的土耳其斯坦
-     - [X] 进入中国
-     - [X] 西安
-     - [X] 从西安到北京
-   - 第二篇 从东京到顿琴 [8/8]
-     - [X] 日本: 值得投资的国家
-       俄罗斯和南非是产金的大国. 这两个国家经济已经开始发展，如果全球恢复金本位
-       那是否意味着这两个国家会更加富有。
-       作者关于金本位的质疑:
-       1. 金本位对政客的约束可能会导致政客马上会将金本位作为替罪羊废除金本位
-       2. 当经济发展的时候政客会对黄金参水. 
-
-	  作者还提出关于金本位的解决办法..简单的取消硬通货的资本利得税. 具体原因
-	  也搞不明柏为什么.
-     - [X] 在世界的边缘
-     - [X] 穿越蛮荒之地
-     - [X] 西伯利亚
-     - [X] 乌兰乌德，济马和坎斯克
-     - [X] 新西伯利亚及其以西
-     - [X] 莫斯科
-     - [X] 前往爱尔兰
-   - 第三篇 从顿琴到好望角 [8/8]
-     - [X] 非洲： 征服撒哈啦
-     - [X] 撒哈啦以南
-     - [X] 顺河而下
-     - [X] 愤怒的羔羊
-     - [X] 逃亡
-     - [X] 赞比亚和大津巴布韦
-     - [X] 博次瓦纳
-     - [X] 南非
-   - 第四篇 绕过和恩角 [9/9]
-     - [X] 澳大利亚的长途跋涉
-     - [X] 世界尽头
-     - [X] 布宜诺斯艾利斯
-     - [X] 智力与复活节岛
-     - [X] 走进印加
-     - [X] 沿着达尔文的足迹
-     - [X] 达里恩地带
-     - [X] 巴拿马运河
-     - [X] 回家
-
-** DONE 《次第花开》  - 希阿荣博堪步 著
-   - 第一部 珍宝人生 [3/3]
-     - [X] 珍宝人生 /3
-       关于无我的探讨. 不相信自己的大脑,其实只是一种gtd 方面西方人的客观描述
-       在佛教当中不相信自己的大脑其实就是一种关于无我的态度的哲学. gtd 方面将
-       一切都交给时间管理系统，让自己内心得到安静， 通过一种时间管理的方法来求解
-       脱.能够让自己跳出来作为一种旁观者的态度来处理周遭的事情. 
-       
-       关于认识痛苦. 静静的观察痛苦.
-       痛苦源于我执和法执.
-       
-       解.脱.
-         解: 解开，分开，融化,调和，处理.
-         脱: 离开， 取下，除去 等含义.
-       字面上的含义就是解后脱离开的一个过程.  人生修行安乐的源泉.
-     - [X] 安乐  /37
-     - [X] 从玉树说起 /45
-       附言： 玉树的简短开示. / 71
-       为什么灾难如此频繁？ 为什么佛法兴盛之地也会发生灾难？
-       佛法的加持力何在？为什么修持佛法还是不能避免无常？
-   - 佛门 [5/5]   / 73
-	我们寻遍整个世界, 发现佛法可以让我们的心得到安乐.
-     - [X] 入佛门   /75
-     - [X] 如何做功课  /87
-     - [X] 关于前行的简短开示 /97
-     - [X] 开吾  /119
-     - [X] 善护口业  /124 
-   - 走出修行的误区 [4/4]   /129
-	追求觉悟的过程，就像在意个无边无际的迷宫里突围，没有佛法的指引，
-	我们永远都将被困在里面，原地打转
-     - [X] 皈依	/131
-     - [X] 出离心 /145
-     - [X] 菩提心 /161
-     - [X] 上师和弟子 /181
-   - 冬日札记 [4/4]
-     2009年初，西阿荣博堪布在家乡的扎西特林闭关中心，写下多篇随感，或睹物思人，
-     或畅谈佛法人生，素朴平实的语言背后是一贯的清亮，通达。
-     - [X] 信心    /215
-     - [X] 无尽藏  /221
-     - [X] 母亲    /227
-     - [X] 人人是我师 /232
-   - 生命的依怙
-     真正化解痛苦与危机的方法就是断除损害众生的恶业，行持自利利他的善业。作为佛弟子,
-     不论能力大小，都可以做利益有情的事业，这其中最直接的方式就是放生。
-     - [X] 回忆上师 / 241
-     - [X] 嘱托 /249
-     - [X] 放生问答 /265
-       
 ** 《股市趋势技术分析》  -  Edvards & Magee.  
    - 第一部分 技术分析理论. [/]
      1) [ ] 交易和投资的技术分析方法 / 2
@@ -460,48 +508,3 @@
        没有明确任务的展望充其量只是一个梦想，而缺乏前景的任务只是痛苦和艰辛的劳作。同时拥有前景和任务才是世界的
        希望.
        
-** DONE 《史蒂夫.乔布斯传》	 《沃尔特.艾萨克森》
-   1. [X] 童年
-   2. [X] 奇特的一对
-   3. [X] 出离
-   4. [X] 雅达利与印度
-   5. [X] Apple I
-   6. [X] Apple II
-   7. [X] 克里斯安和丽萨
-   8. [X] 施乐和丽萨
-   9. [X] 上市
-   10. [X] Mac 诞生了
-   11. [X] 现实扭曲力场
-   12. [X] 设计
-   13. [X] 制造 Mac
-   14. [X] 斯卡利来了
-   15. [X] 麦金塔电脑的发布
-   16. [X] 盖茨与乔布斯
-   17. [X] 伊卡洛斯
-   18. [X] NeXT
-   19. [X] 皮克斯
-   20. [X] 凡人
-   21. [X] 玩具总动员
-   22. [X] 再度降临
-   23. [X] 回归
-   24. [X] 非同凡想
-   25. [X] 设计原则
-   26. [X] iMac
-   27. [X] CEO
-   28. [X] 苹果零售店
-   29. [X] 数字中枢
-   30. [X] iTunes 商店
-   31. [X] 爱音乐的人
-   32. [X] 皮克斯的朋友
-   33. [X] 21 世纪的 Mac
-   34. [X] 第一回合
-   35. [X] iPhone
-   36. [X] 第二回合
-   37. [X] iPad
-   38. [X] 新的战斗
-   39. [X] 飞向太空
-   40. [X] 第三回合
-   41. [X] 遗产
-   42. [X] 致谢
-   43. [X] 摄影集
-   44. [X] 资料来源
