--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -279,3 +279,12 @@ alibaba
 [2011-11-07 Mon 09:53]
 
 (/ (+ 6.3 9.3) 2)
+
+alibaba 第一波建仓开始。 目标股数 0.1m.
+
+明年6月份之前，目标看到 13.8  
+
+8.48
+
+12 月份之前建仓 10w 股. 目标成本. 7.49
+
