--- a/org/tradeplan.org
+++ b/org/tradeplan.org
@@ -292,3 +292,10 @@ HSI 指数分析.
 
 月图，行情处于横盘震荡区间.价格反复穿越均线系统目前缺乏超长线的投资机会.
 周图，均线系统
+
+
+美元指数和股票的相关关系.
+
+1. 如果美元指数走强，本来是可以说明djs 走强。 但是美元强弱除了美元自身
+   还有就是和其他非美货币的对比. 比如。如果其他非美，尤其欧元相对更弱.
+   那么只能说明一点，那就是全球的经济还是处于危机当中，
